maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:16: error: not found: value setInication
  setInication(baggleCoords(0), baggleCoords(1), 0);
  ^